Fix bar overlap on resize

--- a/src/ui/components/RightBar.css
+++ b/src/ui/components/RightBar.css
@@ -11,10 +11,7 @@
   width: 80px;
   right: 0%;
 
-  z-index: 99;
-
   background-color: rgba(77, 77, 77, 0.6);
-  z-index: 999;
 }
 
 .BarImg:hover {
